nullmarked, more work on item/itemstack/recipe integration